[package]
name = "nl-core"
version.workspace = true
license.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
tempfile = "3.10"
trauma = "2"
tokio = "1"

anyhow = { workspace = true }
log = { workspace = true }