[package]
name = "nl-ui"
version.workspace = true
license.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nl-core = { path = "../nl-core" }

log = { workspace = true }
env_logger = "0.11"
anyhow = { workspace = true }

serde = { workspace = true }
toml = "0.8"

# GUI (will replace with Xilem later)
druid = { version = "0.8", features = ["im"] }
