[package]
name = "nl-ui"
version.workspace = true
license.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nl-core = { path = "../nl-core" }

log = { workspace = true }
env_logger = "0.11"
anyhow = { workspace = true }

serde = { workspace = true }
toml = "0.8"

# GUI
iced = "0.12"